# EZTinker

./: .bandit.yaml  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  .ty.toml  DEMO_TEST_RESULTS.md  Makefile  README.md  SHAREGPT_FORMAT.md  SIMPLE_CICD.md  example.py  noxfile.py  pyproject.toml  pytest.ini  rejection_sft_demo.py  rejection_sft_demo_sharegpt.py  run_mini_demo.py  setup-dev.sh  test_rejection_sft.py  test_server_check.py  test_training.py  ty.toml
.claude/: CLAUDE.md
docs/: DEVELOPMENT.md  REJECTION_SFT_DEMO.md  REJECTION_SFT_GUIDE.md
docs/references/: CICD_GUIDE.md  PACKAGE_REFACTOR_SUMMARY.md  QUICKSTART.md  README_PACKAGE_IMPROVEMENTS.md  SHAREGPT_FORMAT.md  demo_run_summary.md  example_api_usage.py
examples/: README.md  REJECTION_SFT_SUMMARY.md  custom_loss_function_usage.py  eval_trained_model.py  example_client_api.py  gsm8k_sft.py  rejection_256.py  rejection_aggressive.py  rejection_final.py  rejection_mini.py  rejection_one_sample.py  rejection_sampling_rlhf.py  rejection_sft.py  rejection_sft_integrated.py  rejection_sft_simple.py  rejection_sft_train.py  rejection_simple_math.py  sharegpt_dialect_a.json  sharegpt_dialect_a.jsonl  sharegpt_dialect_b.json  sharegpt_dialect_b.jsonl  simple_math_dataset.py  test_quick.py
src/eztinker/: __init__.py  client.py
src/eztinker/api/: server.py
src/eztinker/cli/: main.py
tests/: conftest.py  test_sharegpt_dataset.py
tests/benchmarks/: test_training_performance.py
tests/integration/: test_api_contract.py
tests/unit/: test_api_server.py
(+16 files in other folders)
